--- a/src/templates/Grace_Template.css
+++ b/src/templates/Grace_Template.css
@@ -41,9 +41,8 @@
 }
 
 h1 {
-    margin-top: 3em;
-    font-size: 80px;
-    font-weight: bold;
+    margin-top: 1;
+    font-size: 50px;
     color: #0f03e7;
     text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
 }
@@ -68,7 +67,7 @@ p {
 }
 
 .skills h3, .interests h3, .education h3, .experience h3 {
-    font-size: 1.2em;
+    font-size: 9;
 }
 
 .experience h3 {
