icons added and interests fixed for grace

--- a/src/templates/Grace_Template.css
+++ b/src/templates/Grace_Template.css
@@ -103,3 +103,11 @@ p {
 .border-bottom {
     border-bottom: 4px solid black !important;
 }
+.InterestRow {
+    line-height: 1.5em;
+}
+.Interest {
+    font-weight: bold;
+    font-size: 1.2em;
+    padding-left: 10px;
+}
