--- a/src/templates/Nashville.css
+++ b/src/templates/Nashville.css
@@ -29,6 +29,9 @@
 			color: black;
 			text-decoration: none;
 		}
+
+
+
 .titleBlock {
 	background-color: #414446;
 	padding-left: 5px;
@@ -37,9 +40,10 @@
 	border-radius: 5px;
 	color:white;
 }
+
 .centerLine {
 	color: 414446;
-	width: 550px;
+	width: 300px;
 	border:none;
 	border-top:4px solid black;
 }
@@ -60,12 +64,12 @@
 }
 
 .tan {
-	background-color: #FFD995;
+	background-color: #FFECCD;
 }
 
 .intro {
 	padding-left: 0px;
-	padding-right: 30px;
+	padding-right: 0px;
 }
 
 .verticalLine {
@@ -82,13 +86,31 @@
 }
 
 
-h1 {
+.h1 {
 	margin-top: 1em;
-	font-size: 64px;
+	font-size: 84px;
 	font-weight: bold;
 	color: white;
-    text-shadow: -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black, 1px 1px 0 black;
-	}
+}
+
+.h2 {
+	color: red;
+	align-items: left;
+	font-size: 400px;
+}
+.educationSummary{
+	color: black;
+	font-size: 14px;
+	font-weight: bold;
+	padding-left: 5px;
+	padding-right: 5px;
+
+}
+
+.degreeStyle {
+	color: red;
+	font-size: 28px;
+}
 
 .box {
 	background-color: #ff0000; 
@@ -114,11 +136,14 @@ h1 {
 	width: 40px;
 	height: 42px;
 	border-radius: 50%;
-	background-color: white;
 	border: 2px solid grey;
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+
+.spacerBlock {
+	padding: 20px;
 }
 
 .profile {
@@ -126,7 +151,8 @@ h1 {
 	padding-bottom: 10px;
 }
 
-.skills h3, .interests h3, .education h3, .experience h3 {
+
+.skills h3, .expertises h3, .education h3, .experience h3 {
 	font-size: 1.2em;
 }
 
@@ -138,7 +164,7 @@ h1 {
 	font-size: 1.1em;
 }
 
-.skills, .interests, .education, .experience {
+.skills, .expertises, .education, .experience {
 	margin-left: 50px;
 }
 
